--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,7 @@
 @import "base/_tabs.scss";
 @import "base/_trans-table.scss";
 @import "base/_arrow-button.scss";
+@import "base/_content-block.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -36,3 +37,5 @@
 @import "styles/_tarifs.scss";
 @import "styles/_portfolio-cards.scss";
 @import "styles/_docs-slider.scss";
+@import "styles/_stages.scss";
+@import "styles/_person-detail.scss";
