--- a/src/css/base/_arrow-button.scss
+++ b/src/css/base/_arrow-button.scss
@@ -1,3 +1,11 @@
+.arrow-button-block {
+    margin-top: 24px;
+    text-align: center;
+    @media(min-width: $md) {
+        text-align: right;
+    }
+}
+
 .arrow-button {
     @include button-reset;
     align-items: center;
