--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -19,6 +19,7 @@
 @import "base/_trans-table.scss";
 @import "base/_arrow-button.scss";
 @import "base/_content-block.scss";
+@import "base/_cut.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -39,3 +40,5 @@
 @import "styles/_docs-slider.scss";
 @import "styles/_stages.scss";
 @import "styles/_person-detail.scss";
+@import "styles/_contacts.scss";
+@import "styles/_big-card.scss";
