--- a/src/template/features.html
+++ b/src/template/features.html
@@ -2,24 +2,24 @@
     <div class="features__item">
         <img src="images/content/features/icon_1.svg" alt="">
 
-        <p>Новые технологии: от анализа данных до искусственного интеллекта</p>
+        <p>Новые технологии: от анализа<br> данных до искусственного<br> интеллекта</p>
     </div>
 
     <div class="features__item">
         <img src="images/content/features/icon_2.svg" alt="">
 
-        <p>Постоянное совершенствование процессов</p>
+        <p>Постоянное совершенствование<br> процессов</p>
     </div>
 
     <div class="features__item">
         <img src="images/content/features/icon_3.svg" alt="">
 
-        <p>Внедрение новых подходов и методологий</p>
+        <p>Внедрение новых подходов и<br> методологий</p>
     </div>
 
     <div class="features__item">
         <img src="images/content/features/icon_4.svg" alt="">
 
-        <p>Обучение и повышение квалификации</p>
+        <p>Обучение и повышение<br> квалификации</p>
     </div>
 </div>
