--- a/src/css/base/_checkboxes_and_radio.scss
+++ b/src/css/base/_checkboxes_and_radio.scss
@@ -37,6 +37,7 @@
 
         &:checked:disabled ~ .checkbox__icon {
             background-color: var(--grey_medium);
+            border-color: var(--grey_medium);
         }
     }
 
