--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -20,6 +20,7 @@
 @import "base/_arrow-button.scss";
 @import "base/_content-block.scss";
 @import "base/_cut.scss";
+@import "base/_banners.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -42,3 +43,4 @@
 @import "styles/_person-detail.scss";
 @import "styles/_contacts.scss";
 @import "styles/_big-card.scss";
+@import "styles/_single-slider.scss";
