--- a/src/template/projects-slider.html
+++ b/src/template/projects-slider.html
@@ -15,6 +15,17 @@
 
                         <div id="big_card_detail_1" class="big-card__popup">
                             <div class="big-card__popup-inner">
+                                <div class="big-card__popup-preview">
+                                    <div class="big-card__image">
+                                        <img src="images/content/content_blocks/img_3.jpg" srcset="images/content/content_blocks/img_3@2x.jpg 2x" alt="">
+                                        <img class="big-card__image-decor" src="images/backgrounds/big-card/decor_1.svg" alt="">
+                                    </div>
+
+                                    <h3><a href="#">Fantasy Hearts</a></h3>
+
+                                    <p>Мы обсуждаем и формализуем идею, предлагаем оптимальные пути реализации и вместе составляем список базовых требований.</p>
+                                </div>
+
                                 <p><b>Платформа</b><br> iOS, Android (кросс-платформенный движок Unity)</p>
 
                                 <p><b>Жанр</b><br> Пошаговая RPG с элементами roguelike</p>
@@ -28,7 +39,7 @@
                                     <li>Адаптивный ИИ противников</li>
                                 </ul>
 
-                                <button class="button button--dark button--h_56" type="button">
+                                <button class="button button--dark button--h_56" type="button" data-fancybox="request_project_card_1" data-src="#request">
                                     <svg aria-hidden="true">
                                         <use xlink:href="images/sprite.svg#report_icon" />
                                     </svg>
@@ -63,6 +74,20 @@
 
                         <div id="big_card_detail_2" class="big-card__popup">
                             <div class="big-card__popup-inner">
+                                <div class="big-card__popup-preview">
+                                    <div class="big-card__image">
+                                        <img src="images/content/content_blocks/img_4.jpg" srcset="images/content/content_blocks/img_4@2x.jpg 2x" alt="">
+                                        <img class="big-card__image-decor" src="images/backgrounds/big-card/decor_2.svg" alt="">
+                                    </div>
+
+                                    <h3><a href="#">Игра «Undeads Rush»</a></h3>
+
+                                    <p>С развитием технологий каждое новое открытие становится значительным шагом вперед. Современные решения находят применение в различных сферах жизни, улучшая качество и ускоряя процессы. Важно быть в
+                                        курсе последних тенденций, чтобы не упустить новые возможности. С развитием технологий каждое новое открытие становится значительным шагом вперед. Современные решения находят применение в различных сферах
+                                        жизни, улучшая
+                                        качество и ускоряя процессы. Важно быть в курсе последних тенденций, чтобы не упустить новые возможности.</p>
+                                </div>
+
                                 <p><b>Платформа</b><br> iOS, Android (кросс-платформенный движок Unity)</p>
 
                                 <p><b>Жанр</b><br> Пошаговая RPG с элементами roguelike</p>
@@ -76,7 +101,7 @@
                                     <li>Адаптивный ИИ противников</li>
                                 </ul>
 
-                                <button class="button button--dark button--h_56" type="button">
+                                <button class="button button--dark button--h_56" type="button" data-fancybox="request_project_card_2" data-src="#request">
                                     <svg aria-hidden="true">
                                         <use xlink:href="images/sprite.svg#report_icon" />
                                     </svg>
