--- a/src/template/stages.html
+++ b/src/template/stages.html
@@ -67,7 +67,7 @@
                 <div class="stages__text-block">
                     <h3>Сбор данных</h3>
                     <p>Программирование игровых систем, UI, логики. Интеграция графики, звука и анимации. Оптимизация под различные мобильные устройства (размер, производительность, батарея).</p>
-                    <button class="button button--dark button--h_56" type="button">
+                    <button class="button button--dark button--h_56" type="button" data-fancybox="request_stage_1" data-src="#request">
                         <svg aria-hidden="true">
                             <use xlink:href="images/sprite.svg#doc_icon" />
                         </svg>
@@ -87,7 +87,7 @@
                     <h3>Составление документации</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus incidunt facere debitis pariatur neque sunt, magnam recusandae dolorum voluptate hic cupiditate tenetur provident aperiam eveniet autem, deserunt,
                         repudiandae? Illum, magnam.</p>
-                    <button class="button button--dark button--h_56" type="button">
+                    <button class="button button--dark button--h_56" type="button" data-fancybox="request_stage_2" data-src="#request">
                         <svg aria-hidden="true">
                             <use xlink:href="images/sprite.svg#doc_icon" />
                         </svg>
@@ -106,7 +106,7 @@
                 <div class="stages__text-block">
                     <h3>Утверждение заказчиком</h3>
                     <p>Amet cupiditate fugiat repellat nobis saepe minima iure ab dignissimos mollitia, omnis error doloribus iusto. Nulla tempore dicta illo! Ad, harum ea!</p>
-                    <button class="button button--dark button--h_56" type="button">
+                    <button class="button button--dark button--h_56" type="button" data-fancybox="request_stage_3" data-src="#request">
                         <svg aria-hidden="true">
                             <use xlink:href="images/sprite.svg#doc_icon" />
                         </svg>
@@ -125,7 +125,7 @@
                 <div class="stages__text-block">
                     <h3>Поэтапная разработка</h3>
                     <p>Consectetur soluta earum debitis iusto assumenda minus modi, quas culpa odit dignissimos voluptate dolor facilis, cum non. Atque aspernatur tempore facere quisquam.</p>
-                    <button class="button button--dark button--h_56" type="button">
+                    <button class="button button--dark button--h_56" type="button" data-fancybox="request_stage_4" data-src="#request">
                         <svg aria-hidden="true">
                             <use xlink:href="images/sprite.svg#doc_icon" />
                         </svg>
@@ -144,7 +144,7 @@
                 <div class="stages__text-block">
                     <h3>Тестирование перед релизом</h3>
                     <p>Dolorum ratione laboriosam iusto ut minus nostrum quibusdam pariatur quisquam, consequatur. Assumenda vitae porro ex iure corporis, deleniti omnis ipsum earum aspernatur.</p>
-                    <button class="button button--dark button--h_56" type="button">
+                    <button class="button button--dark button--h_56" type="button" data-fancybox="request_stage_5" data-src="#request">
                         <svg aria-hidden="true">
                             <use xlink:href="images/sprite.svg#doc_icon" />
                         </svg>
@@ -163,7 +163,7 @@
                 <div class="stages__text-block">
                     <h3>Релиз и поддержка</h3>
                     <p>Sapiente odit minus molestiae hic, modi voluptas tempore, id temporibus totam, mollitia aspernatur aliquid saepe iste. Alias, voluptate odit modi iusto sint.</p>
-                    <button class="button button--dark button--h_56" type="button">
+                    <button class="button button--dark button--h_56" type="button" data-fancybox="request_stage_6" data-src="#request">
                         <svg aria-hidden="true">
                             <use xlink:href="images/sprite.svg#doc_icon" />
                         </svg>
