--- a/src/template/tarifs-slider.html
+++ b/src/template/tarifs-slider.html
@@ -15,7 +15,7 @@
 
                         <p class="tarif__price">от 200 000 ₽</p>
 
-                        <button class="tarif__button" type="button">Оставить заявку</button>
+                        <button class="tarif__button" type="button" data-fancybox="request_tarif_minimum" data-src="#request">Оставить заявку</button>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
 
                         <p class="tarif__price">от 700 000 ₽</p>
 
-                        <button class="tarif__button" type="button">Оставить заявку</button>
+                        <button class="tarif__button" type="button" data-fancybox="request_tarif_standart" data-src="#request">Оставить заявку</button>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
 
                         <p class="tarif__price">от 3 000 000 ₽</p>
 
-                        <button class="tarif__button" type="button">Оставить заявку</button>
+                        <button class="tarif__button" type="button" data-fancybox="request_tarif_optimum" data-src="#request">Оставить заявку</button>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
 
                         <p class="tarif__price">от 12 000 000 ₽</p>
 
-                        <button class="tarif__button" type="button">Оставить заявку</button>
+                        <button class="tarif__button" type="button" data-fancybox="request_tarif_ultimate" data-src="#request">Оставить заявку</button>
                     </div>
                 </div>
             </div>
