--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -185,10 +185,26 @@ h2 {
 
 h3 {
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1.5;
     margin-top: 0;
-    margin-bottom: 16px;
+    margin-bottom: 8px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+h4 {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.33333;
+    margin-top: 0;
+    margin-bottom: 8px;
+    @media(min-width: $fhd) {
+        font-size: 23px;
+        line-height: 1.39130;
+    }
 
     &:last-child {
         margin-bottom: 0;
@@ -238,6 +254,10 @@ p {
     &:last-child {
         margin-bottom: 0;
     }
+
+    & + .bullet {
+        margin-top: -12px;
+    }
 }
 
 ol,
@@ -258,6 +278,10 @@ ol {
 ul {
     &.bullet {
         list-style: none;
+
+        & + h4 {
+            margin-top: 24px;
+        }
 
         li {
             min-height: 24px;
@@ -400,6 +424,13 @@ blockquote {
     }
     @media(min-width: $sm) {
         padding-left: 32px;
+    }
+    @media(min-width: 1300px) {
+        margin-left: -32px;
+    }
+    @media(min-width: $fhd) {
+        font-size: 32px;
+        line-height: 1.25;
     }
 
     &::before {
