--- a/src/css/styles/_big-card.scss
+++ b/src/css/styles/_big-card.scss
@@ -12,13 +12,31 @@
         }
     }
 
+    &--reverse {
+        @media(min-width: $md) {
+            flex-direction: row-reverse;
+        }
+
+        .big-card__text-block {
+            @media(min-width: $md) {
+                padding-left: 32px;
+                padding-right: 0;
+            }
+            @media(min-width: $fhd) {
+                padding-left: 48px;
+                padding-right: 0;
+            }
+        }
+    }
+
     &__image {
         padding: 32px;
         position: relative;
         z-index: 1;
         @media(min-width: $md) {
-            min-width: 41.27%;
-            width: 41.27%;
+            align-self: flex-start;
+            min-width: 41.3%;
+            width: 41.3%;
         }
         @media(min-width: $fhd) {
             padding: 48px;
@@ -54,12 +72,25 @@
     &__text-block {
         padding: 0 16px 20px;
         @media(min-width: $md) {
-            padding: 24px 24px 24px 0;
+            padding: 32px 32px 32px 0;
         }
         @media(min-width: $fhd) {
             padding: 48px 48px 48px 0;
         }
+    }
 
+    &__text {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        @media(max-width: $md - 0.02px) {
+            -webkit-line-clamp: 4;
+        }
+    }
+
+    &__popup,
+    &__text-block {
         h3 {
             font-size: 20px;
             font-weight: 500;
@@ -74,16 +105,6 @@
                 color: var(--dark);
                 text-decoration: none;
             }
-        }
-    }
-
-    &__text {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        @media(max-width: $md - 0.02px) {
-            -webkit-line-clamp: 4;
         }
     }
 
@@ -134,6 +155,7 @@
 
     &__popup-inner {
         @media(max-width: $sm - 0.02px) {
+            background-color: var(--blue_light);
             min-height: 100%;
         }
         @media(min-width: $sm) and (max-width: $md - 0.02px) {
@@ -144,7 +166,38 @@
         }
         @media(max-width: $md - 0.02px) {
             background-color: #fff;
-            padding: 16px;
+            padding: 16px 32px;
+        }
+    }
+
+    &__popup-preview {
+        margin-bottom: 16px;
+        @media(min-width: $md) {
+            display: none;
+        }
+
+        .big-card__image {
+            max-width: 360px;
+        }
+    }
+
+    &__results {
+        border: none;
+        border-collapse: collapse;
+
+        td {
+            padding: 0 8px 8px 0;
+            vertical-align: baseline;
+        }
+    }
+
+    &__result {
+        color: var(--primary);
+        font-family: var(--secondary_font);
+        font-size: 17px;
+        font-weight: 500;
+        @media(min-width: $fhd) {
+            font-size: 24px;
         }
     }
 
