--- a/src/template/persons-slider-small.html
+++ b/src/template/persons-slider-small.html
@@ -64,6 +64,16 @@
                                 <p><b>Увлечения:</b> коллекционирует старые игровые консоли и обожает настолки.</p>
                                 <p><b>Суперсила:</b> умеет сочетать эстетику с функциональностью — чтобы было красиво и удобно.</p>
                             </div>
+
+                            <a class="arrow-button" href="#">
+                                <span>На страницу сотрудника</span>
+
+                                <span class="arrow-button__icon">
+                                    <svg aria-hidden="true">
+                                        <use xlink:href="images/sprite.svg#chevron_right_24" />
+                                    </svg>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -132,6 +142,16 @@
                                 <p><b>Увлечения:</b> коллекционирует старые игровые консоли и обожает настолки.</p>
                                 <p><b>Суперсила:</b> умеет сочетать эстетику с функциональностью — чтобы было красиво и удобно.</p>
                             </div>
+
+                            <a class="arrow-button" href="#">
+                                <span>На страницу сотрудника</span>
+
+                                <span class="arrow-button__icon">
+                                    <svg aria-hidden="true">
+                                        <use xlink:href="images/sprite.svg#chevron_right_24" />
+                                    </svg>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -200,6 +220,16 @@
                                 <p><b>Увлечения:</b> коллекционирует старые игровые консоли и обожает настолки.</p>
                                 <p><b>Суперсила:</b> умеет сочетать эстетику с функциональностью — чтобы было красиво и удобно.</p>
                             </div>
+
+                            <a class="arrow-button" href="#">
+                                <span>На страницу сотрудника</span>
+
+                                <span class="arrow-button__icon">
+                                    <svg aria-hidden="true">
+                                        <use xlink:href="images/sprite.svg#chevron_right_24" />
+                                    </svg>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -268,6 +298,16 @@
                                 <p><b>Увлечения:</b> коллекционирует старые игровые консоли и обожает настолки.</p>
                                 <p><b>Суперсила:</b> умеет сочетать эстетику с функциональностью — чтобы было красиво и удобно.</p>
                             </div>
+
+                            <a class="arrow-button" href="#">
+                                <span>На страницу сотрудника</span>
+
+                                <span class="arrow-button__icon">
+                                    <svg aria-hidden="true">
+                                        <use xlink:href="images/sprite.svg#chevron_right_24" />
+                                    </svg>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -336,6 +376,16 @@
                                 <p><b>Увлечения:</b> коллекционирует старые игровые консоли и обожает настолки.</p>
                                 <p><b>Суперсила:</b> умеет сочетать эстетику с функциональностью — чтобы было красиво и удобно.</p>
                             </div>
+
+                            <a class="arrow-button" href="#">
+                                <span>На страницу сотрудника</span>
+
+                                <span class="arrow-button__icon">
+                                    <svg aria-hidden="true">
+                                        <use xlink:href="images/sprite.svg#chevron_right_24" />
+                                    </svg>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
