--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -413,6 +413,7 @@ ul {
 }
 
 blockquote {
+    font-family: var(--primary_font);
     font-size: 22px;
     font-style: italic;
     line-height: 1.27272;
