--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -44,3 +44,5 @@
 @import "styles/_contacts.scss";
 @import "styles/_big-card.scss";
 @import "styles/_single-slider.scss";
+@import "styles/_speech-card.scss";
+@import "styles/_gallery-slider.scss";
