--- a/src/template/banners/banner_3.html
+++ b/src/template/banners/banner_3.html
@@ -2,28 +2,26 @@
     <div class="banner__inner banner__columns">
         <div class="banner__column">
             <h2>Ссылки</h2>
-
-            <a class="button button--light button--h_56 mobile-hidden" href="#">
-                <svg aria-hidden="true">
-                    <use xlink:href="images/sprite.svg#chevron_right_24" />
-                </svg>
-                <span>Узнать больше</span>
-            </a>
         </div>
 
         <div class="banner__column">
-            <p class="big-text">Мы поможем вам создать гейм-дизайн документацию (ГДД) или подготовить питч-презентацию для поиска инвесторов</p>
+            <p class="big-text">Будьте в курсе актуальных обновлений и событий в мире FANTASY HEARTS!</p>
 
-            <p>Это идеальный вариант, если вы хотите проработать концепцию или привлечь финансирование</p>
+            <div class="banner__links">
+                <a href="#" target="_blank" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#globe_icon" />
+                    </svg>
+                    <span>Перейти на сайт игры</span>
+                </a>
 
-            <a class="button button--light button--h_56 desktop-hidden" href="#">
-                <svg aria-hidden="true">
-                    <use xlink:href="images/sprite.svg#chevron_right_24" />
-                </svg>
-                <span>Узнать больше</span>
-            </a>
+                <a href="#" target="_blank" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#tg_icon" />
+                    </svg>
+                    <span>Перейти в ТГ-канал</span>
+                </a>
+            </div>
         </div>
     </div>
-    <div class="decor decor--1"></div>
-    <div class="decor decor--2"></div>
 </div>
