--- a/src/css/base/_banners.scss
+++ b/src/css/base/_banners.scss
@@ -44,12 +44,65 @@
         }
     }
 
+    &--bg_3 {
+        .banner__inner {
+            @media(min-width: $md) {
+                background-image: url("../images/backgrounds/banners/banner_3_desktop.svg");
+                background-position: 0 100%;
+                background-size: cover;
+            }
+        }
+    }
+
+    &--bg_4 {
+        .banner__inner {
+            background-image: url("../images/backgrounds/banners/banner_4_mobile.svg");
+            background-position: 50% 0;
+            @media(min-width: $md) {
+                background-image: url("../images/backgrounds/banners/banner_4_desktop.svg");
+                background-position: 100% 0;
+                background-size: cover;
+            }
+            @media(min-width: $fhd) {
+                padding: 80px;
+            }
+        }
+
+        .banner__illustration {
+            @media(min-width: $fhd) {
+                height: 346px;
+                margin-top: -60px;
+                width: 170px;
+            }
+        }
+
+        .banner__columns--reverse {
+            .banner__column {
+                &:first-child {
+                    @media(min-width: $md) {
+                        width: calc(45% - 48px / 2);
+                    }
+                }
+
+                &:last-child {
+                    @media(min-width: $md) {
+                        width: calc(55% - 48px / 2);
+                    }
+                }
+            }
+        }
+    }
+
     .big-text {
         font-size: 18px;
         font-weight: 500;
         line-height: 1.33333;
         @media(min-width: $fhd) {
             font-size: 24px;
+        }
+
+        & + .banner__links {
+            margin-top: 24px;
         }
     }
 
@@ -70,6 +123,16 @@
         @media(max-width: $md - 0.02px) {
             max-width: 360px;
             width: 100%;
+        }
+    }
+
+    blockquote {
+        margin-left: 0;
+        padding-top: 0;
+        padding-left: 0;
+
+        &::before {
+            display: none;
         }
     }
 
@@ -121,6 +184,37 @@
         @media(min-width: $md) {
             height: 188px;
             width: 92px;
+        }
+    }
+
+    &__links {
+        display: flex;
+        font-size: 14px;
+        font-weight: 600;
+        flex-wrap: wrap;
+        gap: 16px 24px;
+        line-height: 1.28571;
+        @media(min-width: $fhd) {
+            font-size: 16px;
+            line-height: 1.5;
+        }
+
+        a {
+            align-items: center;
+            color: currentColor;
+            display: inline-flex;
+            gap: 8px;
+            text-decoration: none;
+            @include hover {
+                color: currentColor;
+            }
+
+            svg {
+                fill: currentColor;
+                height: 24px;
+                min-width: 24px;
+                width: 24px;
+            }
         }
     }
 
