--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -46,3 +46,4 @@
 @import "styles/_single-slider.scss";
 @import "styles/_speech-card.scss";
 @import "styles/_gallery-slider.scss";
+@import "styles/_case-banner.scss";
