--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -47,3 +47,4 @@
 @import "styles/_speech-card.scss";
 @import "styles/_gallery-slider.scss";
 @import "styles/_case-banner.scss";
+@import "styles/_partners-slider.scss";
