--- a/src/css/styles/_big-card.scss
+++ b/src/css/styles/_big-card.scss
@@ -12,6 +12,30 @@
         }
     }
 
+    &--type_2 {
+        @media(min-width: $md) {
+            align-items: center;
+            display: flex;
+            gap: 24px;
+        }
+        @media(min-width: $fhd) {
+            border-radius: 32px;
+            gap: 40px;
+        }
+
+        .big-card__image {
+            padding: 0;
+            @media(max-width: $md - 0.01px) {
+                margin-left: -8px;
+                margin-right: -8px;
+            }
+        }
+
+        .big-card__text-block {
+            padding: 0;
+        }
+    }
+
     &--reverse {
         @media(min-width: $md) {
             flex-direction: row-reverse;
