--- a/src/css/styles/_features.scss
+++ b/src/css/styles/_features.scss
@@ -63,3 +63,170 @@ h2 + .features {
         }
     }
 }
+
+.big-feature {
+    background-color: var(--blue_light);
+    border: 1px solid var(--blue_dark);
+    border-radius: 32px;
+    padding: 16px;
+    @media(max-width: $md - 0.02px) {
+        filter: drop-shadow(0px 0px 10px rgba(106, 198, 255, 0.25));
+    }
+    @media(min-width: $md) {
+        align-items: flex-start;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 48px;
+        justify-content: space-between;
+        padding: 48px 48px 48px 56px;
+    }
+    @media(min-width: $fhd) {
+        padding: 56px 56px 56px 74px;
+    }
+
+    &__image {
+        background-color: #8ABDDC;
+        border-radius: 24px;
+        overflow: hidden;
+        @media(max-width: $md - 0.02px) {
+            margin-bottom: 24px;
+        }
+        @media(min-width: $md) {
+            min-width: 350px;
+            width: 350px;
+        }
+
+        img {
+            background-color: #8ABDDC;
+            mix-blend-mode: overlay;
+            display: block;
+            width: 100%;
+        }
+    }
+
+    &__text-block {
+        @media(min-width: $md) {
+            max-width: 780px;
+        }
+
+        h3 {
+            @media(min-width: $fhd) {
+                font-size: 23px;
+                line-height: 1.39130;
+            }
+        }
+
+        blockquote {
+            @media(min-width: $md) {
+                margin-left: -32px;
+            }
+        }
+    }
+}
+
+.big-features-slider {
+    position: relative;
+    z-index: 1;
+    @media(max-width: $md - 0.02px) {
+        margin-left: calc(0.01px - var(--container_padding));
+        margin-right: calc(0.01px - var(--container_padding));
+    }
+
+    .swiper {
+        &:not(.swiper-initialized) {
+            .swiper-wrapper {
+                flex-direction: column;
+                gap: 24px;
+            }
+
+            .slider-pagination {
+                display: none;
+            }
+        }
+    }
+
+    .swiper-slide {
+        height: auto;
+        @media(max-width: $md - 0.02px) {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            width: 328px;
+        }
+
+        .big-feature {
+            height: 100%;
+        }
+    }
+
+    .slider-pagination {
+        margin-top: 0;
+    }
+}
+
+.feature-card {
+    border-radius: 24px;
+    background-color: var(--blue_medium);
+    padding: 16px;
+    @media(min-width: $fhd) {
+        padding: 24px;
+    }
+
+    &__image {
+        margin-bottom: 12px;
+        width: 48px;
+        @media(min-width: $fhd) {
+            margin-bottom: 24px;
+            width: 80px;
+        }
+
+        img {
+            display: block;
+        }
+    }
+
+    h3 {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 1.33333;
+        margin-bottom: 4px;
+        @media(min-width: $fhd) {
+            font-size: 23px;
+            line-height: 1.39130;
+        }
+    }
+
+    p {
+        font-size: 14px;
+        line-height: 1.28571;
+        @media(min-width: $fhd) {
+            font-size: 16px;
+            line-height: 1.5;
+        }
+    }
+}
+
+.features-cards-slider {
+    position: relative;
+    z-index: 1;
+    @media(max-width: $hd - 0.02px) {
+        margin-left: calc(0.01px - var(--container_padding));
+        margin-right: calc(0.01px - var(--container_padding));
+    }
+
+    .swiper-slide {
+        height: auto;
+        @media(max-width: $md - 0.02px) {
+            width: 328px;
+        }
+
+        .feature-card {
+            height: 100%;
+        }
+    }
+
+    .slider-pagination {
+        @media (min-width: $hd) and (max-width: 1319.98px) {
+            display: flex;
+        }
+    }
+}
