--- a/src/css/styles/_header.scss
+++ b/src/css/styles/_header.scss
@@ -661,6 +661,7 @@
     &__callback {
         align-self: center;
         color: var(--primary);
+        margin-bottom: 3px;
         outline: 5px solid rgba(255, 255, 255, 0.18);
         @media(max-width: $hd - 0.02px) {
             display: none;
@@ -668,6 +669,7 @@
         @media(max-width: $fhd - 0.02px) {
             font-size: 16px;
             height: 40px;
+            margin-bottom: 2px;
             padding-left: 16px;
             padding-right: 16px;
             padding-bottom: 0;
